--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <!--	<script defer src="js/Task01.js"></script>-->
 <!--	 <script defer src="js/Task02.js"></script>-->
-	  <script defer src="js/Task03.js"></script>
-<!--  <script defer src="js/game01.js"></script>-->
+<!--	  <script defer src="js/Task03.js"></script>-->
+  <script defer src="js/game01.js"></script>
 </head>
 
 <body class="page">
